fix border on mobile

--- a/assets/css/page.sass
+++ b/assets/css/page.sass
@@ -75,6 +75,7 @@ main
     font-size: 0 !important
   .card-div
     background: none !important
+    border: none !important
 
 .card-title
   position: absolute
